force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Account__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Preferences (old)</relationshipLabel>
    <relationshipName>Communication_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>