force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_City__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_City__c</fullName>
    <label>Town/City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>