force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Contact__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communication Preferences (old)</relationshipLabel>
    <relationshipName>Communication_Preferences</relationshipName>
    <type>Lookup</type>
</CustomField>