force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>