force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Email__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>