force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Opt_in__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Opt_in__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opt in</label>
    <type>Checkbox</type>
</CustomField>