force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Phone__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>