force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Postal_Code__c</fullName>
    <label>Mailing Zip/Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>