force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_State__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>