force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Street_2__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Street_2__c</fullName>
    <label>Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>