force-app/main/default/objects/sugati__Communication_Preference__c/fields/sugati__CP_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__CP_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brochure</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Push Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>